<?xml version="1.0"?>
<package format="2">
  <name>calibration</name>
  <version>1.0.0</version>
  <description>The calibration package</description>

  <maintainer email="feng.ding1@hirain.com">Feng DING</maintainer>
  <maintainer email="hanqing.tian@hirain.com">Hanqing TIAN</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
